pkg/firewall/testdata/broken/in
# Due to a daemon restart, the FORWARD chain is incorrect.
#
# Generated by iptables-save v1.8.6 on Tue May  9 07:20:28 2023
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [56:4173]
:CILIUM_FORWARD - [0:0]
:CILIUM_INPUT - [0:0]
:CILIUM_OUTPUT - [0:0]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
:KUBE-EXTERNAL-SERVICES - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-PROXY-FIREWALL - [0:0]
:KUBE-SERVICES - [0:0]
:PER-CONTAINER-FIREWALL - [0:0]
:WHISK-FIREWALL - [0:0]
-A INPUT -j WHISK-FIREWALL
-A INPUT -m comment --comment "cilium-feeder: CILIUM_INPUT" -j CILIUM_INPUT
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
-A INPUT -m comment --comment "kubernetes health check service ports" -j KUBE-NODEPORTS
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A INPUT -j KUBE-FIREWALL
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -j PER-CONTAINER-FIREWALL
-A FORWARD -j WHISK-FIREWALL
-A FORWARD -m comment --comment "cilium-feeder: CILIUM_FORWARD" -j CILIUM_FORWARD
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
-A FORWARD -m comment --comment "kubernetes forwarding rules" -j KUBE-FORWARD
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A OUTPUT -m comment --comment "cilium-feeder: CILIUM_OUTPUT" -j CILIUM_OUTPUT
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -j KUBE-FIREWALL
-A CILIUM_FORWARD -o cilium_host -m comment --comment "cilium: any->cluster on cilium_host forward accept" -j ACCEPT
-A CILIUM_FORWARD -i cilium_host -m comment --comment "cilium: cluster->any on cilium_host forward accept (nodeport)" -j ACCEPT
-A CILIUM_FORWARD -i lxc+ -m comment --comment "cilium: cluster->any on lxc+ forward accept" -j ACCEPT
-A CILIUM_FORWARD -i cilium_net -m comment --comment "cilium: cluster->any on cilium_net forward accept (nodeport)" -j ACCEPT
-A CILIUM_INPUT -m mark --mark 0x200/0xf00 -m comment --comment "cilium: ACCEPT for proxy traffic" -j ACCEPT
-A CILIUM_OUTPUT -m mark --mark 0xa00/0xfffffeff -m comment --comment "cilium: ACCEPT for proxy return traffic" -j ACCEPT
-A CILIUM_OUTPUT -m mark --mark 0x800/0xe00 -m comment --comment "cilium: ACCEPT for l7 proxy upstream traffic" -j ACCEPT
-A CILIUM_OUTPUT -m mark ! --mark 0xe00/0xf00 -m mark ! --mark 0xd00/0xf00 -m mark ! --mark 0xa00/0xe00 -m mark ! --mark 0x800/0xe00 -m mark ! --mark 0xf00/0xf00 -m comment --comment "cilium: host->any mark as from host" -j MARK --set-xmark 0xc00/0xf00
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
-A KUBE-FIREWALL ! -s 127.0.0.0/8 -d 127.0.0.0/8 -m comment --comment "block incoming localnet connections" -m conntrack ! --ctstate RELATED,ESTABLISHED,DNAT -j DROP
-A KUBE-FIREWALL -m comment --comment "kubernetes firewall for dropping marked packets" -m mark --mark 0x8000/0x8000 -j DROP
-A KUBE-FORWARD -m conntrack --ctstate INVALID -j DROP
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -m mark --mark 0x4000/0x4000 -j ACCEPT
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding conntrack rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A KUBE-SERVICES -d 10.245.246.49/32 -p tcp -m comment --comment "elastic-system/elastic-webhook-server:https has no endpoints" -m tcp --dport 443 -j REJECT --reject-with icmp-port-unreachable
-A PER-CONTAINER-FIREWALL -j RETURN
-A WHISK-FIREWALL -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A WHISK-FIREWALL -d 64.225.108.0/32 -i docker0 ! -o docker0 -m comment --comment "node: invoker0-blue-fq3cn" -j REJECT --reject-with icmp-port-unreachable
-A WHISK-FIREWALL -d 46.101.189.29/32 -i docker0 ! -o docker0 -m comment --comment "node: master-fq3u1" -j REJECT --reject-with icmp-port-unreachable
-A WHISK-FIREWALL -d 161.35.73.178/32 -i docker0 ! -o docker0 -m comment --comment "node: gateway-fq3cu" -j REJECT --reject-with icmp-port-unreachable
-A WHISK-FIREWALL -d 64.226.123.105/32 -i docker0 ! -o docker0 -m comment --comment "node: master-fq3u0" -j REJECT --reject-with icmp-port-unreachable
-A WHISK-FIREWALL -d 64.226.77.245/32 -i docker0 ! -o docker0 -m comment --comment "node: prometheus-fq3cc" -j REJECT --reject-with icmp-port-unreachable
-A WHISK-FIREWALL -d 64.226.113.245/32 -i docker0 ! -o docker0 -m comment --comment "node: controller-blue-fq3u9" -j REJECT --reject-with icmp-port-unreachable
-A WHISK-FIREWALL -d 46.101.208.98/32 -i docker0 ! -o docker0 -m comment --comment "node: controller-blue-fq3uz" -j REJECT --reject-with icmp-port-unreachable
-A WHISK-FIREWALL -d 64.226.103.237/32 -i docker0 ! -o docker0 -m comment --comment "node: invoker0-blue-fq3c3" -j REJECT --reject-with icmp-port-unreachable
-A WHISK-FIREWALL -d 100.65.0.82/32 -i docker0 ! -o docker0 -m comment --comment "kube api service" -j REJECT --reject-with icmp-port-unreachable
-A WHISK-FIREWALL -d 10.245.0.11/32 -i docker0 ! -o docker0 -m comment --comment "CoreDNS service" -j ACCEPT
-A WHISK-FIREWALL -d 10.244.3.35/32 -i docker0 ! -o docker0 -m comment --comment "CoreDNS pod" -j ACCEPT
-A WHISK-FIREWALL -d 10.0.0.0/8 -i docker0 ! -o docker0 -m comment --comment "cluster services" -j REJECT --reject-with icmp-port-unreachable
-A WHISK-FIREWALL -s 172.17.0.0/16 -d 172.17.0.0/16 -i docker0 -o docker0 -m comment --comment "docker bridge" -j REJECT --reject-with icmp-port-unreachable
-A WHISK-FIREWALL -s 172.17.0.0/16 -d 169.254.0.0/16 -i docker0 ! -o docker0 -m comment --comment "link local subnet" -j REJECT --reject-with icmp-port-unreachable
-A WHISK-FIREWALL -j RETURN
COMMIT
# Completed on Tue May  9 07:20:28 2023
